# mr-spiky

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  justfile  pyproject.toml  snn_baselines.pt  snn_ecdf.pt  snn_weights.pt  threshold.json  whitening.pt
.github/workflows/: docker-build-and-push.yml  mr-spiky-review-docker.yml  mr-spiky-review.yml
data/: download_codecomplex.py  download_codesearchnet.py  download_mlcq.py  download_pylint_labels.py  download_pyresbugs.py  download_senior_corpus.py  mine_annotations.py
docs/: GITHUB_ACTION.md
docs/deck/: README.md  index.html  style.css
docs/deck/manim/: lif_membrane_over_lines.py  stdp_learning_rule.py
src/: api.py  calibrate.py  encode.py  features.py  infer.py  model.py  rephrase.py  repo.py  review.py  train_stdp.py
tests/: test_api.py  test_features.py  test_infer.py
