[project]
name = "mrspiky"
version = "0.1.0"
description = "Mr. Spiky — Intuition Compiler: SNN-based code suspicion analyzer"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.139.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "snntorch>=1.0.0",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
