[project]
name = "mrspiky"
version = "0.1.0"
description = "Mr. Spiky — Intuition Compiler: SNN-based code suspicion analyzer"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.116.0",
    "datasets>=5.0.0",
    "fastapi>=0.139.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "snntorch>=1.0.0",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false

# torch pulls ~3GB of NVIDIA CUDA/cuDNN wheels from PyPI by default. Mr. Spiky
# is CPU-only, so on Linux we source torch from PyTorch's CPU-only wheel index
# (drops the image from ~3GB to ~500MB). On macOS the CPU index has no arm64
# wheels — fall back to PyPI, whose macOS torch ships without CUDA anyway.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "rich>=15.0.0",
]
